update file html

--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@
     <footer>
       <p>Hak Cipta &copy; 2023 Asean Youth Forum</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
